Loosen equality check
Add epsilon to detector property's equality check of beam and origin
vectors and orientation matrix

Change-Id: Ie5cba2530740b808a0d2ac6b8307fb0e023a8ae3